--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
 <div class="container">
   <!--Section1-->
   <section class="section-1">
-    <h1 class="section-heading"></h1>
+    <h1 class="section-heading">
+      Variety Of Foods
+    </h1>
+    <div class="section-1-icons">
+      <i class="fas fa-egg"></i>
+      <i class="fas fa-stroopwafel"></i>
+      <i class="fas fa-cheese"></i>
+      <i class="fas fa-hotdog"></i>
+      <i class="fas fa-drumstick-bite"></i>
+      <i class="fas fa-apple-alt"></i>
+      <i class="fas fa-ice-cream"></i>
+      <i class="fas fa-fish"></i>
+      <i class="fas fa-cookie"></i>
+      <i class="fas fa-seedling"></i>
+    </div>
   </section>
   <!--End of Section1-->
 </div>
