--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         Variety Of Foods 
       </h1>
       <div class="section-1-icons">
-        <i class="fas fa-egg"></i>
-       <!--<i class="fas fa-stroopwafel"></i>
+        <i class="fas fa-egg change"></i>
+        <i class="fas fa-stroopwafel"></i>
         <i class="fas fa-cheese"></i>
         <i class="fas fa-hotdog"></i>
         <i class="fas fa-drumstick-bite"></i>
@@ -29,7 +29,7 @@
         <i class="fas fa-ice-cream"></i>
         <i class="fas fa-fish"></i>
         <i class="fas fa-cookie"></i>
-        <i class="fas fa-seedling"></i>-->
+        <i class="fas fa-seedling"></i> 
       </div>
     </section>
     <!--End of Section1-->
