--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="./images/food.svg" type="image/x-icon">
   <title>Creative food</title>
 </head>
 
@@ -33,6 +34,11 @@
       </div>
     </section>
     <!--End of Section1-->
+    <!--Section2-->
+      <section class="section-2">
+        <h1 class="section-heading">popular meals</h1>
+      </section>
+    <!--End of Section2-->
   </div>
   <script src="./js/script.js"></script>
 </body>
