--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <button class="card-btn">Order now</button>
           </div>
           <div class="card">
-            <img src="./images/card-img-3.png" class="card-img">
-            <h3 class="card-name">Lobster</h3>
+            <img src="./images/card-img-4.svg" class="card-img" height="55%">
+            <h3 class="card-name">Pizza</h3>
             <button class="card-btn">Order now</button>
           </div>
         </div>
